--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.1.2",
+    "http": "0.0.1-security",
+    "mobx": "^6.6.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.31"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=1992 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
