--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "author": "gadkiyabram",
   "license": "ISC",
   "dependencies": {
-    "http": "^0.0.1-security",
+    "@types/socket.io": "^3.0.2",
+    "http": "0.0.1-security",
     "websocket": "^1.0.34"
   }
 }
